syntax = "proto3";

package transaction;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "br.maurigvs.banking.transaction.grpc";

message TransactionRequest {
  int64 account_id = 1;
  string description = 2;
  double amount = 3;
}

message TransactionReply {
  int64 id = 1;
  string description = 2;
  double amount = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service TransactionService {
  rpc Create(TransactionRequest) returns (TransactionReply);
  rpc FindByAccountId(google.protobuf.Int64Value) returns (stream TransactionReply);
}
